# pq-file-crypt

./: Cargo.toml  README.md
docs/: pqfc_flowchart.md  pqfc_specification.md
src/: aliases.rs  common.rs  lib.rs  streaming.rs
src/crypto/: aes.rs  chacha.rs  mod.rs  xwing_kem.rs  xwing_sig.rs
src/decryption/: decrypt.rs  mod.rs  read.rs
src/encryption/: encrypt.rs  mod.rs  write.rs
